@@ -3,9 +3,17 @@
 -Xmx{{ druid_historical_heap_size }}
 -XX:MaxDirectMemorySize={{ druid_historical_max_direct_size }}
 -XX:+UseG1GC
+-XX:+HeapDumpOnOutOfMemoryError
 -XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
 -XX:+PrintGCTimeStamps
+-XX:+PrintGCApplicationStoppedTime
+-XX:+PrintGCApplicationConcurrentTime
 -Xloggc:{{ druid_historical_gc_logfile }}
+-XX:HeapDumpPath={{ druid_historical_heap_dump_file }}
+-XX:+UseGCLogFileRotation
+-XX:NumberOfGCLogFiles=50
+-XX:GCLogFileSize=10m
 -Duser.timezone=UTC
 -Dfile.encoding=UTF-8
 -Djava.io.tmpdir={{ druid_historical_tmp_dir }}
